<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context="com.udacity.myapplication.MainActivity">

    <TextView
        android:id="@+id/announce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/udacity_dark_blue"
        android:textAlignment="center"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/photo"
        android:layout_below="@id/announce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/learning"
        android:contentDescription="@string/main_image"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/name"
        android:layout_below="@id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/name"
        android:textSize="48dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/address"
        android:textSize="18dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/testimonial"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_margin="10dp" />
</RelativeLayout>

